Sun Mar 15 02:09:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (bmcall): should not uninitialized variable.  a patch from
	  pegacorn at [ruby-dev:38169].

Sat Mar 14 18:18:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_proc_call, rb_node_arity, bmcall, curry): checks
	  overflow.

	* proc.c (rb_proc_parameters): unnamed_parameters() expects in
	  not VALUE.

Fri Mar 13 09:17:12 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/fileutils.rb (FileUtils#fu_get_gid): stringify group
	  argument before making regexp match.  [ruby-dev:38155]

Fri Mar 13 15:10:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_x509ext.c (ossl_x509ext_set_value): should use
	  OPENSSL_free instead of free.  a patch from Charlie Savage a
	  [ruby-core:22858].

Fri Mar 13 08:06:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (rv_strdup): macro to duplicate nul-terminated string.
	  [ruby-core:22852]

Thu Mar 12 22:14:01 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_def_const): use INT2NUM because
	  OP_NETSCAPE_DEMO_CIPHER_CHANGE_BUG doesn't fit into Fixnum.

Thu Mar 12 05:22:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_fallback_body): off_t may be larger than long.

	* iseq.c (rb_iseq_disasm): RSTRING_LEN() returns long.

	* process.c (rb_f_sleep): time() needs time_t.

Thu Mar 12 05:12:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (ruby_init_stack): range of rlim_cur may be
	  larger than int.

	* missing/vsnprintf.c (BSD_vfprintf): commented out code which has
	  no effect at all.

Wed Mar 11 20:13:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/handle.c (rb_dlhandle_sym): RTLD_NEXT is not for symbol
	  name.   [ruby-dev:38150]

Wed Mar 11 13:03:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/handle.c (rb_dlhandle_sym): fixed heap corruption.
	  [ruby-core:22822]

Tue Mar 10 13:45:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
