@@ -1,3 +1,8 @@
+Tue Mar 17 14:25:16 2009  Tanaka Akira  <akr@fsij.org>
+
+	* lib/pathname.rb (Pathname#sub): set $~ in block.binding.
+	  [ruby-dev:38173]
+
 Sun Mar 15 02:09:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* proc.c (bmcall): should not uninitialized variable.  a patch from
